[package]
name = "eternity"
version = "0.1.0"
authors = ["Marcel <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime = "0.17.1"
clap = "3.0.0-beta.1"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.31"
log = "0.4.11"
fern = "0.6.0"
chrono = "0.4.13"
matrix-sdk = { version = "0.1.0", git = "https://github.com/matrix-org/matrix-rust-sdk", default-features = false, features = ["messages"]}# features = ["encryption"]}
matrix-sdk-common-macros = { version = "0.1.0", git = "https://github.com/matrix-org/matrix-rust-sdk"}
async-trait = "0.1"
url = "2.1.1"
serde = "1.0.114"
serde_yaml = "0.8.13"
thiserror = "1.0.20"
wasmer-runtime-core = "0.17.1"
lazy_static = "1.4.0"


[features]
default = ["encryption"]
encryption = ["matrix-sdk/encryption"]
